@@ -3,3 +3,6 @@ Version 0.1     29 Jul 2002
 
 Version 0.2     27 Jan 2005
     Windows version now using ctypes
+
+Version ...     ...
+    added setDataDir to Windows backend
